LinKreta_POC_Repository/force-app/main/default/objects/SME_PL__c/SME_PL__c.object-meta.xml
<CustomObject>
    <label>SME(PL)</label>
    <nameField>
        <displayFormat>SME-{000000}</displayFormat>
        <label>SME(PL) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SME(PL)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>