LinKreta_POC_Repository/force-app/main/default/objects/SME_PL__c/fields/LOV__c.field-meta.xml
<CustomField>
    <fullName>LOV__c</fullName>
    <label>LOV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>