LinKreta_POC_Repository/force-app/main/default/objects/SME_PL__c/fields/SME_Master__c.field-meta.xml
<CustomField>
    <fullName>SME_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SME Master</label>
    <referenceTo>SME_Master__c</referenceTo>
    <relationshipLabel>SME(PL)</relationshipLabel>
    <relationshipName>SME_PL</relationshipName>
    <type>Lookup</type>
</CustomField>