LinKreta_POC_Repository/force-app/main/default/objects/SME_PL__c/fields/Sub_Expertise_PL__c.field-meta.xml
<CustomField>
    <fullName>Sub_Expertise_PL__c</fullName>
    <label>Sub Expertise (PL)</label>
    <referenceTo>SubExpertisePL__c</referenceTo>
    <relationshipLabel>SME(PL)</relationshipLabel>
    <relationshipName>SME_PL</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>