LinKreta_POC_Repository/force-app/main/default/objects/SME_PL__c/fields/SubExpertiseLOV__c.field-meta.xml
<CustomField>
    <fullName>SubExpertiseLOV__c</fullName>
    <formula>Sub_Expertise_PL__r.LOV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubExpertiseLOV</label>
    <type>Text</type>
</CustomField>