LinKreta_POC_Repository/force-app/main/default/objects/SME_PL__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LOV__c</columns>
    <columns>LOV_Id__c</columns>
    <columns>SME_Leader__c</columns>
    <columns>Sub_Expertise_PL__c</columns>
    <columns>SubExpertiseLOV__c</columns>
    <columns>SME_Master__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>